fix: page was not overflowing

--- a/src/components/CutoffIndicator/CutoffIndicator.module.css
+++ b/src/components/CutoffIndicator/CutoffIndicator.module.css
@@ -2,7 +2,7 @@
   position: absolute;
   left: 0;
   right: 0;
-  bottom: 0;
+  top: 11in;
   height: 0;
   z-index: 10;
   pointer-events: none;
